test/cases/compile_errors/out_of_range_comptime_int_passed_to_floatToInt.zig
export fn entry() void {
    const x = @floatToInt(i8, 200);
    _ = x;
}

// error
// backend=stage2
// target=native
//
// :2:31: error: float value '200' cannot be stored in integer type 'i8'
